Splits design token files

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "token-transformer figma-tokens.json tokens/input.json --preserveRawValue=true --resolveReferences=false && style-dictionary build --config ./sd.config.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/BitLipa/design-token/issues"
   },
-  "homepage": "https://github.com/BitLipa/design-token#readme"
+  "homepage": "https://github.com/BitLipa/design-token#readme",
+  "dependencies": {
+    "style-dictionary": "^3.7.1",
+    "token-transformer": "^0.0.23"
+  }
 }
